0.02
 - Add REPOSITORY section to doc.

0.01 2016-02-17T10:48:26+01:00
 - First version.