@@ -1,4 +1,5 @@
 0.02
+ - Add 'input_encoding' parameter.
  - Add REPOSITORY section to doc.
 
 0.01 2016-02-17T10:48:26+01:00
